# BGVR

./: .gitignore  Cargo.toml  README.md
chapter_01/: README.md
chapter_01/chapter_16/: README.md  example_genome.fasta
chapter_01/project_12/: output.txt
chapter_01/project_13/: Cargo.toml  README.md  output.txt
chapter_01/project_14/: Cargo.toml  README.md  output.txt
chapter_01/project_15/: Cargo.toml  README.md  output.txt
chapter_01/project_16/: README.md  output.txt
chapter_01/project_17/: README.md
chapter_02/project_21/: Cargo.toml  README.md  output.txt
chapter_02/project_22/: Cargo.toml  README.md  output.txt
chapter_02/project_23/: Cargo.toml  README.md  output.txt  reads.fasta
chapter_02/project_24/: README.md  example.sam
chapter_03/: README.md
chapter_03/project_31/: Cargo.toml  README.md  output.txt
chapter_03/project_31_2/: Cargo.toml  README.md  output.txt
chapter_03/project_31_3/: Cargo.toml  README.md  output.txt
chapter_03/project_31_4/: Cargo.toml  README.md
chapter_03/project_31_6/: Cargo.toml  README.md  example.fasta  output.json  results.txt
chapter_03/project_31_7/: README.md  example.fastq  output.txt
chapter_03/project_32_1/: Cargo.toml  README.md  output.txt
chapter_03/project_32_2/: Cargo.toml  README.md  output.txt
chapter_03/project_32_3/: Cargo.toml  README.md  outpu.txt
first project/: Cargo.toml
project_22/: example.fasta
project_23/: example.fasta
project_24/: Cargo.toml  example.fastq  example.vcf  new_example.sam
project_5/: Cargo.toml
project_6/: Cargo.toml
project_7/: Cargo.toml
(+24 files in other folders)
